tests/unit-fail-compilation/no-return.ref
no-return.c[1:1-4] : In C99 and higher, functions must have a return type
Fatal error: exception Frontc.ParseError("Parse error")
Entity: line 1: parser error : Document is empty
Parsing error
^
Translation failed. Run kcc -d no-return.c to see commands run.
